minor code update